--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataInitializer.cs" />
     <Compile Include="Entities\Question.cs" />
     <Compile Include="Entities\Student.cs" />
     <Compile Include="Entities\StudentGroup.cs" />
