added AnswerDTO, AnswerFacade,...

--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -68,12 +68,14 @@
     <Compile Include="AppQuery.cs" />
     <Compile Include="AppUnitOfWork.cs" />
     <Compile Include="AppUnitOfWorkProvider.cs" />
+    <Compile Include="DTOs\AnswerDTO.cs" />
     <Compile Include="DTOs\QuestionDTO.cs" />
     <Compile Include="DTOs\StudentDTO.cs" />
     <Compile Include="DTOs\StudentGroupDTO.cs" />
     <Compile Include="DTOs\TeacherDTO.cs" />
     <Compile Include="DTOs\TestPrefaceDTO.cs" />
     <Compile Include="DTOs\ThematicFieldDTO.cs" />
+    <Compile Include="Facades\AnswerFacade.cs" />
     <Compile Include="Facades\QuestionFacade.cs" />
     <Compile Include="Facades\StudentFacade.cs" />
     <Compile Include="Facades\StudentGroupFacade.cs" />
@@ -82,12 +84,14 @@
     <Compile Include="Facades\ThematicFieldFacade.cs" />
     <Compile Include="Mapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\AnswerListQuery.cs" />
     <Compile Include="Queries\QuestionListQuery.cs" />
     <Compile Include="Queries\StudentGroupListQuery.cs" />
     <Compile Include="Queries\StudentListQuery.cs" />
     <Compile Include="Queries\TeacherListQuery.cs" />
     <Compile Include="Queries\TestPrefaceListQuery.cs" />
     <Compile Include="Queries\ThematicFieldListQuery.cs" />
+    <Compile Include="Repositories\AnswerRepository.cs" />
     <Compile Include="Repositories\QuestionRepository.cs" />
     <Compile Include="Repositories\StudentGroupRepository.cs" />
     <Compile Include="Repositories\StudentRepository.cs" />
