--- a/DAL/packages.config
+++ b/DAL/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Riganti.Utils.Infrastructure.Core" version="1.0.3" targetFramework="net452" />
+  <package id="Riganti.Utils.Infrastructure.EntityFramework" version="1.0.3" targetFramework="net452" />
 </packages>
