--- a/WEB/Views/Web.config
+++ b/WEB/Views/Web.config
@@ -24,7 +24,12 @@
 
   <appSettings>
     <add key="webpages:Enabled" value="false" />
+    <add key="webpages:Version" value="3.0.0.0" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="owin:AppStartup" value="[WEB].Startup" />
   </appSettings>
+
 
   <system.webServer>
     <handlers>
@@ -41,3 +46,5 @@
     </compilation>
   </system.web>
 </configuration>
+
+
